--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "qs": "^6.4.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "whatwg-fetch": "~2.0.3"
   },
   "devDependencies": {
