--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
+    "uuid": "^3.3.2",
     "whatwg-fetch": "~2.0.3"
   },
   "devDependencies": {
