--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "jsx-a11y/no-noninteractive-element-interactions": 0,
     "jsx-a11y/anchor-is-valid": 0,
     "jsx-a11y/media-has-caption": 0,
+    "jsx-a11y/no-static-element-interactions": 0,
     "no-underscore-dangle": 0,
   },
   "globals": {
