--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "eslint": "^4.19.1",
     "highlight.js": "~9.12.0",
     "js-cookie": "^2.2.0",
+    "node-sass-chokidar": "^1.3.3",
+    "npm-run-all": "^4.1.3",
     "prismic-javascript": "^1.4.1",
     "prismic-reactjs": "^0.2.0",
     "prop-types": "^15.6.2",
     "qs": "^6.4.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
     "uuid": "^3.3.2",
     "whatwg-fetch": "~2.0.3"
@@ -22,11 +24,15 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2",
-    "react-scripts": "^1.0.17"
+    "react-scripts": "^1.1.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "postinstall": "npm run build",
