--- a/.eslintrc
+++ b/.eslintrc
@@ -21,5 +21,15 @@
   },
   "env": {
     "browser": true
+    },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "moduleDirectory": [
+          "node_modules",
+          "src" // replace with your app-module-path directory
+        ]
+      }
     }
+  }
 }
