--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
+    "react-transition-group": "^2.5.0",
     "uuid": "^3.3.2",
     "whatwg-fetch": "~2.0.3"
   },
