--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "eslint": "^4.19.1",
     "highlight.js": "~9.12.0",
+    "i": "^0.3.6",
     "js-cookie": "^2.2.0",
+    "lodash.throttle": "^4.1.1",
     "node-sass-chokidar": "^1.3.3",
+    "npm": "^6.4.1",
     "npm-run-all": "^4.1.3",
     "prismic-javascript": "^1.4.1",
     "prismic-reactjs": "^0.2.0",
