--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.2",
   "private": true,
   "dependencies": {
+    "array-flatten": "^2.1.1",
     "eslint": "^4.19.1",
     "highlight.js": "~9.12.0",
     "i": "^0.3.6",
