--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
+    "react-waypoint": "^8.1.0",
     "uuid": "^3.3.2",
     "whatwg-fetch": "~2.0.3"
   },
