--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "array-flatten": "^2.1.1",
-    "eslint": "^4.19.1",
     "highlight.js": "~9.12.0",
     "i": "^0.3.6",
     "js-cookie": "^2.2.0",
@@ -16,20 +15,20 @@
     "prismic-reactjs": "^0.2.0",
     "prop-types": "^15.6.2",
     "qs": "^6.4.0",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-waypoint": "^8.1.0",
     "uuid": "^3.3.2",
     "whatwg-fetch": "~2.0.3"
   },
   "devDependencies": {
+    "react-scripts": "2.1.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2",
-    "react-scripts": "^1.1.5"
+    "eslint-plugin-react": "^7.8.2"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -46,5 +45,11 @@
   "engines": {
     "node": ">=4.8.1",
     "npm": ">=2.15.11"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
