--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "whatwg-fetch": "~2.0.3"
   },
   "devDependencies": {
-    "react-scripts": "2.1.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2"
+    "eslint-plugin-react": "^7.8.2",
+    "react-scripts": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
