--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^4.3.1",
     "react-waypoint": "^8.1.0",
     "uuid": "^3.3.2",
+    "video-react": "^0.13.1",
     "whatwg-fetch": "~2.0.3"
   },
   "devDependencies": {
