--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "qs": "^6.4.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-player": "^1.8.0",
     "react-router-dom": "^4.3.1",
     "react-waypoint": "^8.1.0",
     "uuid": "^3.3.2",
-    "video-react": "^0.13.1",
     "whatwg-fetch": "~2.0.3"
   },
   "devDependencies": {
