--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "prismic-reactjs": "^0.2.0",
     "prop-types": "^15.6.2",
     "qs": "^6.4.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
     "react-player": "^1.8.0",
     "react-router-dom": "^4.3.1",
     "react-waypoint": "^8.1.0",
