--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-waypoint": "^8.1.0",
     "screenfull": "^4.0.0",
     "styled-components": "^4.1.3",
+    "styled-components.macro": "^1.0.0",
     "uuid": "^3.3.2",
     "viewport-units-buggyfill": "^0.6.2",
     "whatwg-fetch": "~2.0.3"
