--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
     "react-player": "^1.8.0",
+    "react-pose": "^4.0.6",
     "react-router-dom": "^4.3.1",
     "react-waypoint": "^8.1.0",
     "screenfull": "^4.0.0",
