--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
   "plugins": [
     "react",
     "jsx-a11y",
-    "import"
+    "import",
+    "react-hooks"
   ],
   "rules": {
     "react/jsx-filename-extension": 0,
@@ -14,6 +15,7 @@
     "jsx-a11y/media-has-caption": 0,
     "jsx-a11y/no-static-element-interactions": 0,
     "no-underscore-dangle": 0,
+    "react-hooks/rules-of-hooks": "error"
   },
   "globals": {
     "window": true
