--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "array-flatten": "^2.1.1",
+    "eslint-plugin-react-hooks": "0.0.0",
     "hex-rgb": "^3.0.0",
     "highlight.js": "~9.12.0",
     "i": "^0.3.6",
