--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "array-flatten": "^2.1.1",
     "eslint-plugin-react-hooks": "0.0.0",
+    "fetch-jsonp": "^1.1.3",
     "hex-rgb": "^3.0.0",
     "highlight.js": "~9.12.0",
     "i": "^0.3.6",
