--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,13 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: npm install
+       - run:
+          name: Install awscli
+          command: sudo pip install awscli
+
+       - run:
+          name: Deploy to S3
+          command: aws s3 sync build s3://this.design-production
 
       - save_cache:
           paths:
