--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2",
-    "react-scripts": "2.1.1"
+    "properjs-s3": "^0.2.0",
+    "react-scripts": "2.1.1",
+    "s3": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
