--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
   "plugins": ["react", "jsx-a11y", "import", "react-hooks"],
   "rules": {
     "react/jsx-filename-extension": 0,
+    "react/forbid-prop-types": 0,
     "jsx-a11y/click-events-have-key-events": 0,
     "jsx-a11y/no-noninteractive-element-interactions": 0,
     "jsx-a11y/anchor-is-valid": 0,
