--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,8 @@
     "jsx-a11y/media-has-caption": 0,
     "jsx-a11y/no-static-element-interactions": 0,
     "no-underscore-dangle": 0,
-    "react-hooks/rules-of-hooks": "error"
+    "react-hooks/rules-of-hooks": "error",
+    "import/no-cycle": 0
   },
   "globals": {
     "window": true
