--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,8 @@
     "no-underscore-dangle": 0,
     "react-hooks/rules-of-hooks": "error",
     "import/no-cycle": 0,
-    "react/no-array-index-key": 0
+    "react/no-array-index-key": 0,
+    "react/destructuring-assignment": 0
   },
   "globals": {
     "window": true
