--- a/package.json
+++ b/package.json
@@ -3,17 +3,10 @@
   "version": "0.1.2",
   "private": true,
   "dependencies": {
-    "array-flatten": "^2.1.1",
     "eslint-plugin-react-hooks": "0.0.0",
     "fetch-jsonp": "^1.1.3",
     "hex-rgb": "^3.0.0",
-    "highlight.js": "~9.12.0",
-    "i": "^0.3.6",
-    "js-cookie": "^2.2.0",
-    "lodash.throttle": "^4.1.1",
-    "node-sass-chokidar": "^1.3.3",
     "npm": "^6.4.1",
-    "npm-run-all": "^4.1.3",
     "prismic-javascript": "^1.5.1",
     "prismic-reactjs": "^0.2.4",
     "prop-types": "^15.6.2",
@@ -24,24 +17,18 @@
     "react-pose": "^4.0.6",
     "react-router-dom": "^5.0.0",
     "react-waypoint": "^8.1.0",
-    "screenfull": "^4.0.0",
     "styled-components": "^4.2.0",
     "styled-components.macro": "^1.0.0",
-    "tylermcrobert-tools": "^1.0.0",
     "uuid": "^3.3.2",
-    "viewport-units-buggyfill": "^0.6.2",
-    "whatwg-fetch": "~2.0.3"
+    "viewport-units-buggyfill": "^0.6.2"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2",
-    "properjs-s3": "^0.2.0",
-    "react-scripts": "2.1.1",
-    "s3": "^4.4.0"
+    "react-scripts": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
