--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "eslint-plugin-react-hooks": "0.0.0",
     "fetch-jsonp": "^1.1.3",
     "hex-rgb": "^3.0.0",
+    "node-sass": "^4.12.0",
     "npm": "^6.4.1",
     "prismic-javascript": "^1.5.1",
     "prismic-reactjs": "^0.2.4",
