--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-player": "^1.8.0",
     "react-pose": "^4.0.6",
     "react-router-dom": "^5.0.0",
+    "react-snap": "^1.23.0",
     "react-waypoint": "^8.1.0",
     "styled-components": "^4.2.0",
     "styled-components.macro": "^1.0.0",
@@ -37,6 +38,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postinstall": "npm run build",
+    "postbuild": "react-snap",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd client/ && npm install && npm run build"
   },
   "engines": {
