--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "qs": "^6.4.0",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
+    "react-helmet": "^5.2.1",
     "react-player": "^1.8.0",
     "react-pose": "^4.0.6",
     "react-router-dom": "^5.0.0",
