--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-player": "^1.8.0",
     "react-pose": "^4.0.6",
     "react-router-dom": "^5.0.0",
+    "react-snap": "^1.23.0",
     "react-video-controls": "^0.1.1",
     "react-waypoint": "^8.1.0",
     "styled-components": "^4.2.0",
