--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "react-player": "^1.8.0",
     "react-pose": "^4.0.6",
     "react-router-dom": "^5.0.0",
-    "react-video-controls": "^0.1.1",
     "react-snap": "^1.23.0",
+    "react-video-controls": "^0.1.1",
     "react-waypoint": "^8.1.0",
+    "sitemap": "^4.0.2",
     "styled-components": "^4.2.0",
     "styled-components.macro": "^1.0.0",
     "uuid": "^3.3.2",
@@ -36,7 +37,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "sitemap": "node sitemap.js",
+    "build": "npm run sitemap && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postinstall": "npm run build",
