--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "styled-components": "^4.3.2"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "fetch": "node src/data/storeLocalData.js",
     "start": "npm run fetch && react-scripts start",
     "build": "npm run fetch && react-scripts build",
