--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "fetch": "node src/data/storeLocalData.js",
     "start": "npm run fetch && react-scripts start",
-    "build": "npm run fetch && react-scripts build"
+    "build": "npm run fetch && react-scripts build",
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,7 +37,8 @@
     "eslint-plugin-prettier": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
-    "prettier": "latest"
+    "prettier": "latest",
+    "react-snap": "^1.23.0"
   },
   "browserslist": {
     "production": [
