--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-imgix": "^8.6.4",
+    "react-intersection-observer": "^8.24.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "source-map-explorer": "^2.0.1",
