--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1",
     "react-imgix": "^8.6.4",
     "react-intersection-observer": "^8.24.1",
     "react-router-dom": "^5.0.1",
