--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-helmet": "^5.2.1",
     "react-imgix": "^8.6.4",
     "react-intersection-observer": "^8.24.1",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
     "source-map-explorer": "^2.0.1",
     "styled-components": "^4.3.2",
     "styled-reset": "^2.0.17"
