--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "source-map-explorer": "^2.0.1",
-    "styled-components": "^4.3.2",
+    "styled-components": "^5.0.0-beta.8",
     "styled-reset": "^2.0.17"
   },
   "scripts": {
