--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,32 +1,3 @@
 {
-  "parser": "babel-eslint",
-  "extends": ["airbnb", "prettier"],
-  "plugins": ["react", "jsx-a11y", "import", "react-hooks"],
-  "rules": {
-    "react/jsx-filename-extension": 0,
-    "react/forbid-prop-types": 0,
-    "jsx-a11y/click-events-have-key-events": 0,
-    "jsx-a11y/no-noninteractive-element-interactions": 0,
-    "jsx-a11y/anchor-is-valid": 0,
-    "jsx-a11y/media-has-caption": 0,
-    "jsx-a11y/no-static-element-interactions": 0,
-    "no-underscore-dangle": 0,
-    "react-hooks/rules-of-hooks": "error",
-    "import/no-cycle": 0,
-    "react/no-array-index-key": 0,
-    "react/destructuring-assignment": 0
-  },
-  "globals": {
-    "window": true
-  },
-  "env": {
-    "browser": true
-  },
-  "settings": {
-    "import/resolver": {
-      "node": {
-        "moduleDirectory": ["node_modules", "src"]
-      }
-    }
-  }
+  "extends": ["@tylermcrobert/eslint-config/react"]
 }
