--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "reactjs-starter",
+  "name": "thisdesign",
   "version": "0.1.2",
   "private": true,
   "dependencies": {
-    "eslint-plugin-react-hooks": "0.0.0",
     "fetch-jsonp": "^1.1.3",
     "hex-rgb": "^3.0.0",
     "logrocket": "^1.0.3",
@@ -29,11 +28,7 @@
     "viewport-units-buggyfill": "^0.6.2"
   },
   "devDependencies": {
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.14.3",
+    "@tylermcrobert/eslint-config": "^1.0.0",
     "react-scripts": "2.1.1"
   },
   "scripts": {
