--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.2",
   "private": true,
   "dependencies": {
+    "@types/node": "^13.1.6",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
     "fetch-jsonp": "^1.1.3",
     "hex-rgb": "^3.0.0",
     "logrocket": "^1.0.3",
@@ -24,11 +27,13 @@
     "sitemap": "^4.0.2",
     "styled-components": "^4.2.0",
     "styled-components.macro": "^1.0.0",
+    "typescript": "^3.7.4",
     "uuid": "^3.3.2",
     "viewport-units-buggyfill": "^0.6.2"
   },
   "devDependencies": {
     "@tylermcrobert/eslint-config": "^1.0.0",
+    "eslint": "^6.8.0",
     "react-scripts": "2.1.1"
   },
   "scripts": {
