--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "prismic-reactjs": "^0.2.4",
     "prop-types": "^15.6.2",
     "qs": "^6.4.0",
-    "react": "^16.8.0-alpha.1",
-    "react-dom": "^16.8.0-alpha.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-player": "^1.8.0",
     "react-pose": "^4.0.6",
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@tylermcrobert/eslint-config": "^1.0.0",
     "eslint": "^6.8.0",
-    "react-scripts": "2.1.1"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
