--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "fetch-jsonp": "^1.1.3",
+    "flickity": "^2.2.1",
+    "flickity-imagesloaded": "^2.0.0",
     "hex-rgb": "^3.0.0",
     "logrocket": "^1.0.3",
     "node-sass": "^4.12.0",
